--- a/package.json
+++ b/package.json
@@ -1,32 +1,21 @@
 {
-  "name": "yoga",
+  "name": "grap",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sashka0264/Ioga.git"
+    "dev": "nodemon server/app.js",
+    "demon": "forever start server/app.js"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/sashka0264/Ioga/issues"
-  },
-  "homepage": "https://github.com/sashka0264/Ioga#readme",
-  "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "babel-plugin-es6-promise": "^1.1.1",
-    "es6-promise": "^4.2.6",
-    "formdata-polyfill": "^3.0.18",
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2"
-  },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "forever-monitor": "^2.0.0",
+    "graphql": "^14.6.0",
+    "mongoose": "^5.9.1",
+    "nodemon": "^2.0.2"
   }
 }
