--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server/app.js",
-    "demon": "forever start server/app.js"
+    "dev": "nodemon server/index.js",
+    "demon": "forever start server/index.js"
   },
   "author": "",
   "license": "ISC",
